--- a/src/templates/reset-password-email.html
+++ b/src/templates/reset-password-email.html
@@ -6,7 +6,12 @@
     <title>Reset password email</title>
   </head>
   <body>
-    <h1 style="color: blue">Hello, {{name}}!</h1>
+    <h1 style="color: blue">Dear {{email}}!</h1>
+    <p style="color: black">
+      We received a password reset request for your gap.com account. If you made this request, use
+      the link to change your password.
+    </p>
     <p>Click <a href="{{link}}">here</a> to reset your password!</p>
+    <p style="color: black">If you did not request a password reset, please ignore this email.</p>
   </body>
 </html>
