--- a/src/templates/reset-password-email.html
+++ b/src/templates/reset-password-email.html
@@ -7,11 +7,14 @@
   </head>
   <body>
     <h1 style="color: blue">Dear {{email}}!</h1>
-    <p style="color: black">
-      We received a password reset request for your gap.com account. If you made this request, use
-      the link to change your password.
+    <p style="font-size: 16px" style="color: black">
+      We received a password reset request for your account. If you made this request, use the link
+      to change your password.
     </p>
-    <p>Click <a href="{{link}}">here</a> to reset your password!</p>
-    <p style="color: black">If you did not request a password reset, please ignore this email.</p>
+    <p style="font-size: 14px">Click <a href="{{link}}">here</a> to reset your password!</p>
+    <p style="font-size: 16px; color: black">
+      If you did not request a password reset, please ignore this email.
+    </p>
+    <span style="font-size: 14px"> Best regards, H2O dev team </span>
   </body>
 </html>
